@@ -50,21 +50,6 @@ public interface AnnotationCollection {
     List<Annotation> getAnnotationPathAt(long position);
 
     /**
-     * Adds an annotation.
-     *
-     * @param annotation the annotation to add.
-     * @throws OverlappingAnnotationException if the annotation overlaps an existing one.
-     */
-    void add(Annotation annotation) throws OverlappingAnnotationException;
-
-    /**
-     * Removes an annotation.
-     *
-     * @param annotation the annotation to remove.
-     */
-    void remove(Annotation annotation);
-
-    /**
      * Adds a listener for changes in the collection.
      *
      * @param listener the listener to add.
