@@ -1,0 +1,42 @@
+/*
+ * Hex - a hex viewer and annotator
+ * Copyright (C) 2009-2014  Trejkaz, Hex Project
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+package org.trypticon.hex.anno;
+
+/**
+ * A collection of annotations which can be modified.
+ *
+ * @author trejkaz
+ */
+public interface MutableAnnotationCollection extends AnnotationCollection {
+
+    /**
+     * Adds an annotation.
+     *
+     * @param annotation the annotation to add.
+     * @throws OverlappingAnnotationException if the annotation overlaps an existing one.
+     */
+    void add(MutableAnnotation annotation) throws OverlappingAnnotationException;
+
+    /**
+     * Removes an annotation.
+     *
+     * @param annotation the annotation to remove.
+     */
+    void remove(MutableAnnotation annotation);
+}
